--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,10 +20,14 @@
 
 <!-- /********* Section5 : Components & Databinding Deep Dive****************/ -->
 <div class="container">
-  <app-cockpit></app-cockpit>
+  <app-cockpit
+    (serverCreated)="onServerAdd($event)"
+    (bluePrintCreated)="onBlueprintAdd($event)"></app-cockpit>
   <div class="row">
     <div class="col-xs-12">
-      <app-server-element *ngFor="let serverElement of serverElements"></app-server-element>
+      <app-server-element 
+        *ngFor="let serverElement of serverElements"
+        [srvElement]="serverElement"></app-server-element>
     </div>
   </div>
 </div>
