--- a/src/app/Section5-Component&DatabindingDeep/cockpit/cockpit.component.html
+++ b/src/app/Section5-Component&DatabindingDeep/cockpit/cockpit.component.html
@@ -1,16 +1,17 @@
 <div class="row">
   <div class="col-xs-12">
     <p>Add new servers or blueprints!</p>
-    <label>Server name</label>]
-    <input type="text" class="form-control" [(ngModel)]="newServerName">
+    <label>Server name</label>
+    <!-- <input type="text" class="form-control" [(ngModel)]="newServerName"> -->
+    <input type="text" class="form-control" #serverNameInput>
     <label>Server Content</label>
     <input type="text" class="form-control" [(ngModel)]="newServerContent">
     <br>
     <button
       class="btn btn-primary"
-      (click)="onAddServer()">Add Server</button>
+      (click)="onAddServer(serverNameInput)">Add Server</button>
     <button
       class="btn btn-primary"
-      (click)="onAddBlueprint()">Add Server Blueprint</button>    
+      (click)="onAddBlueprint(serverNameInput)">Add Server Blueprint</button>    
   </div>
 </div>
