--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,16 @@
 <!-- //********* Section2 : Basic ****************// -->
 
 <!-- <div class="container"> -->
-  <!-- <div class="row"> -->
-    <!-- <div class="col-xs-12"> -->
-      <!-- <h3>I'm in the application</h3> -->
-      <!-- <hr> -->
-      <!-- <app-server></app-server> -->
-      <!-- <app-servers></app-servers> -->
-      <!-- <div app-servers></div> -->
-      <!-- <div class="app-servers"></div> -->
-    <!-- </div> -->
-  <!-- </div> -->
+<!-- <div class="row"> -->
+<!-- <div class="col-xs-12"> -->
+<!-- <h3>I'm in the application</h3> -->
+<!-- <hr> -->
+<!-- <app-server></app-server> -->
+<!-- <app-servers></app-servers> -->
+<!-- <div app-servers></div> -->
+<!-- <div class="app-servers"></div> -->
+<!-- </div> -->
+<!-- </div> -->
 <!-- </div> -->
 
 
@@ -19,7 +19,7 @@
 
 
 <!-- /********* Section5 : Components & Databinding Deep Dive****************/ -->
-<div class="container">
+<!-- <div class="container">
   <app-cockpit
     (serverCreated)="onServerAdd($event)"
     (bluePrintCreated)="onBlueprintAdd($event)"></app-cockpit>
@@ -36,6 +36,54 @@
           <em *ngIf="serverElement.type === 'blueprint'">{{ serverElement.content }}</em>
         </p>
       </app-server-element>
+    </div>
+  </div>
+</div> -->
+
+
+
+
+
+
+
+
+<!-- /********* Section7 : Directive Deep Dive****************/ -->
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <button class="btn btn-primary" (click)="onlyOdd = !onlyOdd">Only show odd numbers</button>
+      <br><br>
+      <ul class="list-group">
+        <div *ngIf="onlyOdd">
+          <li class="list-group-item" 
+            *ngFor="let odd of oddNumbers" 
+            [ngClass]="{odd: odd % 2 !== 0}" 
+            [ngStyle]="{background: odd % 2 !== 0 ? 'yellow' : 'transparent'}">{{ odd }}</li>
+        </div>
+        <!-- <div *ngIf="!onlyOdd">
+          <li 
+            class="list-group-item" 
+            *ngFor="let even of evenNumbers" 
+            [ngClass]="{odd: even % 2 !== 0}">{{ even }}</li>
+        </div> -->
+        <div *appUnless="!onlyOdd">
+          <li 
+            class="list-group-item" 
+            *ngFor="let even of evenNumbers" 
+            [ngClass]="{odd: even % 2 !== 0}">{{ even }}</li>
+        </div>
+      </ul>
+      <ng-template [ngIf]="onlyOdd">
+        <p>Only odd</p>
+      </ng-template>
+      <p appBasicHighlight>Style with basic directive</p>
+      <p [appBetterHighlight]="'red'" defaultColor="yellow">Style with a better directive</p>
+      <div [ngSwitch]="value">
+        <p *ngSwitchCase="5">value is 5</p>
+        <p *ngSwitchCase="10">value is 10</p>
+        <p *ngSwitchCase="100">value is 100</p>
+        <p *ngSwitchDefault>value is desault</p>
+      </div>
     </div>
   </div>
 </div>
