--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -48,7 +48,7 @@
 
 
 <!-- /********* Section7 : Directive Deep Dive****************/ -->
-<div class="container">
+<!-- <div class="container">
   <div class="row">
     <div class="col-xs-12">
       <button class="btn btn-primary" (click)="onlyOdd = !onlyOdd">Only show odd numbers</button>
@@ -59,14 +59,14 @@
             *ngFor="let odd of oddNumbers" 
             [ngClass]="{odd: odd % 2 !== 0}" 
             [ngStyle]="{background: odd % 2 !== 0 ? 'yellow' : 'transparent'}">{{ odd }}</li>
-        </div>
+        </div> -->
         <!-- <div *ngIf="!onlyOdd">
           <li 
             class="list-group-item" 
             *ngFor="let even of evenNumbers" 
             [ngClass]="{odd: even % 2 !== 0}">{{ even }}</li>
         </div> -->
-        <div *appUnless="!onlyOdd">
+        <!-- <div *appUnless="!onlyOdd">
           <li 
             class="list-group-item" 
             *ngFor="let even of evenNumbers" 
@@ -84,6 +84,30 @@
         <p *ngSwitchCase="100">value is 100</p>
         <p *ngSwitchDefault>value is desault</p>
       </div>
+    </div>
+  </div>
+</div> -->
+
+
+
+
+
+
+
+
+
+
+
+<!-- /********* Section9 : Service and Dependency Injection****************/ -->
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-md-8 col-md-offset-2">
+      <app-new-account></app-new-account>
+      <hr>
+      <app-account
+        *ngFor="let acc of accounts; let i = index"
+        [account]="acc"
+        [id]="i"></app-account>
     </div>
   </div>
 </div>
