--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -212,13 +212,17 @@
 
 
 
-<!-- /********* Section15 : Form****************/ -->
-<div class="container">
+<!-- /********* Section15 : Form Templeta driven****************/ -->
+<!-- <div class="container">
   <div class="row">
-    <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
+    <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2"> -->
+      <!-- ****** -->
       <!-- <form (ngSubmit)="onSubmit(f)" #f> -->
+      <!-- ****** -->
+      <!-- ****** -->
       <!-- <form (ngSubmit)="onSubmit(f)" #f="ngForm"> -->
-      <form (ngSubmit)="onSubmit()" #f="ngForm">
+      <!-- ****** -->
+      <!-- <form (ngSubmit)="onSubmit()" #f="ngForm">
         <div 
           id="user-data" 
           ngModelGroup="userData"
@@ -289,6 +293,57 @@
       <p>Secret Question: {{ user.secretQuestion }}</p>
       <p>Answer: {{ user.answer }}</p>
       <p>Gender: {{ user.gender }}</p>
+    </div>
+  </div>
+</div> -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- /********* Section15 : Form Reactive****************/ -->
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
+      <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+        <div formGroupName="userData">
+          <div class="form-group">
+            <label for="username">Username</label>
+            <input 
+              type="text" 
+              id="username" 
+              formControlName="username"
+              class="form-control">
+            <span 
+              class="help-block" 
+              *ngIf="!signupForm.get('userData.username').valid && signupForm.get('userData.username').touched">Please enter a valid username!</span>
+          </div>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input type="text" id="email" formControlName="email" class="form-control">
+            <span 
+              class="help-block" 
+              *ngIf="!signupForm.get('userData.email').valid && signupForm.get('userData.email').touched">Please enter a valid email!</span>
+          </div>
+        </div>
+        <div class="radio" *ngFor="let gender of genders">
+          <label>
+            <input type="radio" [value]="gender" formControlName="gender">{{ gender }}
+          </label>
+        </div>
+        <span 
+            class="help-block" 
+            *ngIf="!signupForm.valid && signupForm.touched">Please enter a valid data!</span>
+        <button class="btn btn-primary" type="submit">Submit</button>
+      </form>
     </div>
   </div>
 </div>
