--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -339,6 +339,15 @@
             <input type="radio" [value]="gender" formControlName="gender">{{ gender }}
           </label>
         </div>
+        <div formArrayName="hobbies">
+          <h4>Your Hobbies</h4>
+          <button class="btn btn-default" type="button" (click)="onAddHobby()">Add Hobby</button>
+          <div 
+            class="form-group"
+            *ngFor="let hobbyControl of getControls(), let i=index">
+            <input type="text" class="form-control" [formControlName]="i">
+          </div>
+        </div>
         <span 
             class="help-block" 
             *ngIf="!signupForm.valid && signupForm.touched">Please enter a valid data!</span>
