--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -378,16 +378,22 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
+      <input type="text" [(ngModel)]="filteredStatus">
+      <br>
+      <button type="button" class="btn btn-primary" (click)="onAddServer()">Add server</button>
+      <hr>
+      <br>
+      <h2>App Status: {{ appStatus | async }}</h2>
       <ul class="list-group">
         <li 
           class="list-group-item"
-          *ngFor="let server of servers"
+          *ngFor="let server of servers | filter : filteredStatus : 'status'| sort: 'name'"
           [ngClass]="getStatusClasses(server)">
           <span class="badge badge-info">
             {{ server.status }}
           </span>
-          <strong>{{ server.name }}</strong> | 
-          {{ server.instanceType | uppercase }} | 
+          <strong>{{ server.name | shorten: 10 }}</strong> | 
+          {{ server.instanceType | uppercase | reverse }} | 
           {{ server.started | date: 'fullDate' }}
         </li>
       </ul>
