--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -375,7 +375,7 @@
 
 
 <!-- /********* Section17 : Using Pipes to Transform Output****************/ -->
-<div class="container">
+<!-- <div class="container">
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       <input type="text" [(ngModel)]="filteredStatus">
@@ -398,5 +398,73 @@
         </li>
       </ul>
     </div>
+  </div>
+</div> -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- /********* Section18 : Making HTTP Request****************/ -->
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-md-6 col-md-offset-3">
+      <form #postForm="ngForm" (ngSubmit)="onCreatePost(postForm.value)">
+        <div class="form-group">
+          <label for="title">Title</label>
+          <input 
+            type="text"
+            class="form-control"
+            id="title"
+            ngModel
+            name="title"
+            required>
+        </div>
+        <div class="form-group">
+          <label for="content">Content</label>
+          <textarea 
+            type="text"
+            class="form-control"
+            id="content"
+            ngModel
+            name="content"
+            required></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary" [disabled]="!postForm.valid">Send Post</button>
+      </form>
+    </div>
+  </div>
+  <hr>
+  <div class="row">
+    <div class="col-xs-12 col-md-6 col-md-offset-3">
+      <button class="btn btn-primary" (click)="onFetchPost()">Fetch Posts</button>
+      |
+      <button class="btn btn-danger" [disabled]="loadedPosts.length < 1" (click)="onClearPosts()">Clear Posts</button>
+    </div>    
+  </div>
+  <div class="row">
+    <div class="col-xs-12 col-md-6 col-md-offset-3">
+      <p>No posts available!</p>
+    </div>    
   </div>
 </div>
